--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </marquee>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/CGOH3v1oe
+  <form class="sm:hidden lg:block md:block" https://submit-form.com/rlFZHDDk9
 " method="post">
 
 <div style="position: absolute; left: 1.5rem; top:8rem; width: 90%;">
